fix: corrected build gradle